// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Toggle ui with custom label: Component: Toggle => ui => with custom label 1`] = `
<span
  className="toggle-container toggle-primary"
>
  <span
    className="toggle-label me-2"
    onClick={[Function]}
  >
    <Tooltip
      content="Is this a test?"
    >
      test
    </Tooltip>
  </span>
  <input
    checked={false}
    id="toggle"
    onBlur={[MockFunction]}
    onChange={[Function]}
    type="checkbox"
  />
</span>
`;

exports[`Component: Toggle ui with text label: Component: Toggle => ui => with text label 1`] = `
<span
  className="toggle-container toggle-primary"
>
  <span
    className="toggle-label me-2"
    onClick={[Function]}
  >
    test
  </span>
  <input
    checked={false}
    id="toggle"
    onBlur={[MockFunction]}
    onChange={[Function]}
    type="checkbox"
  />
</span>
`;

exports[`Component: Toggle ui without label: Component: Toggle => ui => without label 1`] = `
<span
  className="toggle-container toggle-primary"
>
  <input
    checked={true}
    id="toggle"
    onBlur={[MockFunction]}
    onChange={[Function]}
    type="checkbox"
  />
</span>
`;
